# hackweek-coda

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
coda-ctrl/: Cargo.toml
coda-ctrl/src/: main.rs
coda-flow/: Cargo.toml
coda-flow-service/: Cargo.toml
coda-flow/src/: concurrency.rs  core.rs  entities.rs  main.rs  persistence.rs  transport.rs
coda-ipc/: Cargo.toml
coda-ipc/src/: lib.rs  proto.rs  proto2.rs
coda-py/: README.md  dummy.py  flow_dummy.py  pyproject.toml
coda-py/src/application/: client.py  main.py  tasks.py  workflows.py
coda-py/src/coda/: __init__.py  _actor.py  _client.py  _context.py  _interest.py  _supervisor.py  _task.py  _utils.py  _worker.py  _workflow.py  client.py  context.py  interest.py  supervisor.py  task.py  utils.py  worker.py  workflow.py
coda-py/src/coda_py/: __init__.py  coda_queue.py  main.py  tasks.py  workflows.py
coda-py/src/core/: coda_supervisor.py  coda_task.py  coda_utils.py  coda_worker.py  coda_workflow.py
coda-py/tests/: mocks.py  test_end_to_end.py
coda-supervisor/: Cargo.toml  config.toml  config.yml
coda-supervisor/src/: cli.rs  config.rs  controller.rs  main.rs  storage.rs  task.rs
docs/: vision.md
trash/: NOTES  minisentry.py
