[project]
name = "coda-py"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Armin Ronacher", email = "armin.ronacher@active-4.com" }
]
dependencies = [
    "cbor2>=5.4.6",
    "setuptools>=68.1.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=7.4.0",
]

[tool.hatch.metadata]
allow-direct-references = true
